--- a/frontend/instagramCLone/package.json
+++ b/frontend/instagramCLone/package.json
@@ -13,8 +13,10 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
